syntax= "proto3";

package GrpcClasses.LikePost;

service LikePostGrpc{
  rpc saveLike(LikeModelGrpc) returns (Empty){}
  rpc deleteById(PostUserId) returns (Empty){}
  rpc findLikesByPostId(GetById) returns (Count){}
  rpc findByPostLikedAndUserLiking(PostUserId) returns(IsLiked);
}

message LikeModelGrpc {
  int32 id = 1;
  int32 userIdLiking = 2;
  int32 postIdLiked = 3;
}

message GetById{
  int32 id=1;
}

message PostUserId{
  int32 userId=1;
  int32 postId=2;
}

message IsLiked{
  bool isliked=1;
}

message Count{
  int32 count=1;
}

message Empty{
}